--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@
   {
       margin-left: 13px;
       margin-bottom: 15px;
-      font-size: 16px;
+      font-size: 20px;
       cursor: pointer;
   }
   .content__list p 
@@ -413,7 +413,7 @@
     margin-right: 40px;
     text-align: center;
     cursor: pointer;
-  
+    font-size: 20px;
 }
 .list__icon-nav li.circle 
 {
@@ -426,6 +426,7 @@
 .list__icon-nav li.circle i 
 {
     margin-top: -10px;
+    font-size: 20px;
 }
 .list__icon-nav li.change__position
 {
@@ -433,6 +434,67 @@
 }
 .list__icon-nav li p 
 {
-    font-size: 9px;
+    font-size: 11px;
     margin-top: 5px;
+    font-weight: 550;
+}
+.content__right-list img
+{
+   width: 100%;
+   height: 100%;
+   margin-bottom: 10px;
+   margin-left: -10px;
+}
+.content__right-list img.change__margin-img
+{
+    margin-left: 4px;
+}
+.content__right-list-txt 
+{
+    display: flex;
+}
+.content__right-list 
+{
+    background: none;
+    margin-top: -20px;
+   padding-left: 10px;
+  cursor: pointer;
+}
+.list__txt-heading 
+{
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 5px;
+    line-height: 25px;
+    margin-left: 7px;
+}
+.list__txt-about 
+{
+    color: #AAAA;
+    font-size: 14px;
+    margin-left: 5px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.content__right-list-txt img
+{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.right__list-all-txt
+{
+    margin-left: 4px;
+}
+.content__img 
+{
+    padding: 10px;
+}
+.content__img.changepad 
+{
+    padding: 20px;
+}
+.content__right-list
+{
+    margin-bottom: 40px;
 }
