--- a/reponsive.css
+++ b/reponsive.css
@@ -115,6 +115,14 @@
   height: 40px;
   border-radius: 50%;
 }
+.camera__content 
+{
+    width: 200px;
+}
+.nofiti__content.open5 
+{
+    display: none;
+}
 }
 @media (max-width:450px){
   
@@ -186,7 +194,11 @@
 {
     margin-left: 4px;
 }
-
+.app__content 
+{
+   
+    right: 0%;
+}
 }
 @media (min-width:734px) and (max-width:1024px){
     .content__left 
@@ -309,6 +321,10 @@
 {
     height: 1950px;
 }
+.camera__content 
+{
+    width: 200px;
+}
 }
 @media (min-width:1025px) and (max-width:1210px) {
     .content__left 
@@ -430,6 +446,10 @@
 .content__youtube 
 {
     height:1360px;
+}
+.camera__content 
+{
+    width: 200px;
 }
 }
 @media (min-width:1025px) and (max-width:1112px) {
