--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@
     background: none;
     margin-top: -20px;
    padding-left: 10px;
-   
+   position: relative;
   cursor: pointer;
 }
 .list__txt-heading 
@@ -508,6 +508,7 @@
 .content__right-list
 {
     margin-bottom: 40px;
+    transition: 0.4s;
 }
 .swiper
 {
@@ -713,4 +714,24 @@ padding: 20px;
 .nofiti__content.open5 
 {
     display: block;
+}
+.right__list-icon 
+{
+   position: absolute;
+    color: #fff;
+    top: 0%;
+    right: 10px;
+    background: #000;
+    padding: 5px 15px;
+    display: none;
+    transition: 0.4s;
+  
+}
+.content__right-list:hover .right__list-icon 
+{
+    display: block;
+}
+.right__list-icon.change__px 
+{
+    right:-4px;
 }
