--- a/youtube_content/reponsive.css
+++ b/youtube_content/reponsive.css
@@ -163,6 +163,13 @@
     margin-right: 18px;
     
 }
+.camera__content 
+{
+    position: fixed;
+    top: 6%;
+    right: 7%;
+    width: 170px;
+}
 }
 @media (max-width:400px){
   
@@ -482,7 +489,12 @@
 {
     margin-left: -10px;
 }
-
+.camera__content 
+{
+    position: fixed;
+    top: 6%;
+    right: 4%;
+}
 }
     
 @media (min-width:1210px) and (max-width:1240px) {
