--- a/reponsive.css
+++ b/reponsive.css
@@ -1,4 +1,3 @@
-
 @media (max-width:733px){
     .content__left 
     {
@@ -44,97 +43,136 @@
 {
     display: none;
 }
-.swiper {
-    height: 56px;
-    margin-left: 0px !important;
+.content__emo-about
+{
+  display: none;
+}
+.content__list-emo
+{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+.content__emo-about-2
+{
+   display: block;
+    margin-bottom: 15px;
     margin-top: 10px;
 }
-.swiper.close__3 
+.content__right-nav li 
 {
-    margin-left: 0px !important;
-}
-.swiper 
-{
-    margin-top: 0;
-}
-.list__icon-nav li 
-{
-    display: inline-block;
-    list-style: none;
-    color: #fff;
+    text-align: center;
     margin-left: 20px;
     margin-right: 20px;
-    text-align: center;
-    cursor: pointer;
+
+}
+.content__right-video iframe
+{
+  height: 500px;
+  width: 100%;
+  padding: 10px;
+}
+.content__list-about
+{
+    padding-left: 10px;
+    line-height: 30px;
+    margin-bottom: 5px;
+}
+.content__emo-about-2
+{
+    padding-left: 10px;
+
+}
+.content__right-nav li 
+{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.content__right-nav li .list 
+{
+    display: block;
+    margin-top: 8px;
+}
+.content__right-nav li span
+{
+    display: none;
+}
+.content__sub .sub__about
+{
+    background: none;
+    color: red;
+}
+.content__sub .sub__about-2 
+{
+    color: #888;
+}
+.content__right-video iframe
+{
+  height: 300px;
+  width: 100%;
+  padding: 10px;
+}
+.content__about
+{
+    display: none;
+}
+.content__list-sub
+{
+    border-bottom: 0.5px solid  #313131;
+    padding-bottom: 20px;
+}
+.left__list
+{
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.content__left-list img 
+{
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+}
+.content__left-list
+{
+    height: 3000px;
+
+}
+.content__video 
+{
+    height: 8000px;
+}
+.list__txt-heading
+{
+    margin-left: 10px;
+}
+.list__txt-about
+{
+    margin-left: 10px;
+}
+.content__right-video
+{
+    height: 620px;
 }
 .menu__tablet 
 {
     display: flex;
 }
-.content__right-list 
-{
-    margin-bottom: 80px;
-    padding: 0;
-}
-.content__right-list img
-{
-   width: 100%;
-   height: 100%;
-   margin-bottom: 10px;
-   margin-left: -4px;
-}
-.content__right-list 
-{
-    background: none;
-    margin-top: -20px;
-   padding-left: 0;
 
-}
-.list__txt-heading 
+.list__icon-nav li 
 {
-    color: #fff;
-    font-size: 14px;
-    margin-bottom: 0px;
-    margin-left: 4px;
-    line-height: 23px;
-}
-.content__img
-{
-    padding: 0;
-}
-.list__txt-about 
-{
-    color: #AAAA;
-    font-size: 14px;
-    margin-left: 4px;
-    line-height: 23px;
-    margin-bottom: 10px;
-}
-.content__right-list-txt img
-{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+    margin-left: 18px;
+    margin-right: 18px;
+    
 }
 .camera__content 
 {
-    width: 200px;
-}
-.nofiti__content.open5 
-{
-    display: none;
-}
-.content__right-list i
-{
-   position: absolute;
-    color: #fff;
-    top: 0%;
-    right: 0.5%;
-    background: #000;
-    padding: 5px 15px
+    position: fixed;
+    top: 6%;
+    right: 7%;
+    width: 170px;
 }
 }
-@media (max-width:450px){
+@media (max-width:400px){
   
  
     .header__logo img 
@@ -161,53 +199,59 @@
     {
         margin-top: 12px;
     }
-    .swiper {
-        height: 56px;
-        margin-left: 0px !important;
-  
-    }
-    .list__icon-nav li 
+    .content__right-nav li 
 {
-    display: inline-block;
-    list-style: none;
-    color: #fff;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
-    cursor: pointer;
-    font-size: 9px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 10px;
 }
-.list__icon-nav li p 
+.content__list-logo img 
 {
-    font-size: 9px;
-    margin-top: 5px;
+    width:40px;
+    height: 40px;
 }
-.list__icon-nav li.circle 
+.logo__about
 {
-    border: 2px solid #fff;
-    border-radius: 50%;
-     padding:4px 6px;
-   margin-bottom: 10px;
-    font-size: 14px;
+    font-size: 12px;
+    margin-top: 1px;
+}
+.content__right-video iframe
+{
+  height: 30%;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+.sub__about 
+{
+    font-size: 12px;
+}
+.sub__about-2 i 
+{
+    display: none;
+    margin-left: 0;
+}
+.left__list
+{
+    display: block;
+}
+.content__right-video iframe
+{
+    height: 300px;
+}
+.list__icon-nav li i
+{
+    font-size: 15px;
+}
+.list__icon-nav li p
+{
+    font-size: 8px;
 }
 .list__icon-nav li 
 {
-    display: inline-block;
-    list-style: none;
-    color: #fff;
-
-    text-align: center;
-    cursor: pointer;
-    font-size: 20px;
-}
-.right__list-all-txt
-{
-    margin-left: 4px;
-}
-.app__content 
-{
-   
-    right: 0%;
+    margin-left: 10px;
+    margin-right: 10px;
+    
 }
 }
 @media (min-width:734px) and (max-width:1024px){
@@ -256,93 +300,112 @@
     margin-left: 0px !important;
     margin-top: 10px;
 }
-.content__right 
+.content__emo-about
 {
-    width: 100%;
-    margin-left: 0 !important;
+  display: none;
 }
-.swiper.close__3 
-{
-    margin-left: 0px !important;
-}
-.swiper 
-{
-    margin-top: 0;
-}
-.menu__tablet 
+.content__list-emo
 {
     display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
 }
-.content__right-list 
+.content__emo-about-2
 {
-    margin-bottom: 80px;
+    display: block;
+    margin-bottom: 20px;
 }
-.content__right-list img
+.content__right-nav li 
 {
-   width: 100%;
-   height: 100%;
-   margin-bottom: 10px;
-   margin-left: 0px;
-   margin-left: 4px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
 }
-.content__right-list 
+.content__right-video iframe
 {
-    background: none;
-    margin-top: -20px;
-   padding-left: 0;
-   margin-left: -4px;
+  height: 400px;
 }
-.list__txt-heading 
+.content__right-nav li .list 
 {
-    color: #fff;
-    font-size: 14px;
-    margin-bottom: 0px;
-    margin-left: 5px;
-   line-height: 23px;
+    display: block;
+    margin-top: 8px;
 }
-.content__img
+.content__right-nav li span
 {
-    padding: 10px;
+    display: none;
 }
-.list__txt-about 
+.content__about
 {
-    color: #AAAA;
-    font-size: 14px;
-    margin-left: 5px;
-    line-height: 23px;
+    display: none;
+}
+.content__list-sub
+{
+    border-bottom: 0.5px solid  #313131;
+    padding-bottom: 20px;
+}
+.left__list
+{
+    flex-direction: column;
     margin-bottom: 10px;
+    
+}
+.content__left-list img 
+{
+    
+    width: 198px;
+    height: 124px;
+}
+.content__left-list
+{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.content__right-video
+{
+    height: 600px;
+}
+.list__txt-heading
+{
+    margin-left: 15px;
+}
+.list__txt-about
+{
+    margin-left: 15px;
+}
 
-}
-.content__right-list-txt img
+.content__video 
 {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+    height: 3000px;
 }
-.right__list-all-txt
+.content__sub .sub__about.close
 {
-    margin-left: 4px;
+    display: none;
 }
-.content__right-list
+
+.content__sub  .sub__about-2
 {
-    margin-bottom: 30px;
+    background: #303030;
+    display: none;
 }
-.content__youtube 
+.content__sub  .sub__about-2.open
 {
-    height: 1950px;
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.camera__content 
+.content__sub  .sub__about.open2
 {
-    width: 200px;
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.content__right-list i
+.content__sub  .sub__about-2.close2
 {
-   position: absolute;
-    color: #fff;
-    top: 0%;
-    right: -2%;
-    background: #000;
-    padding: 5px 15px
+    display: none;
+
 }
 }
 @media (min-width:1025px) and (max-width:1210px) {
@@ -380,121 +443,90 @@
 {
     display: none;
 }
-.swiper {
-    height: 56px;
-    margin-left: 0px !important;
-    margin-top: 10px;
-}
-.content__right 
+.content__right-nav li .list 
 {
-    width: 100%;
-    margin-left: 0 !important;
+    display: block;
+    margin-top: 8px;
 }
-.swiper.close__3 
+.content__right-nav li span
 {
-    margin-left: 0px !important;
+    display: none;
 }
-.content__right.open 
-  {
-      margin-left: 32px;
-  }
-  .swiper 
-  {
-      margin-top: 0;
-  }
-  .menu__tablet 
-  {
-      display: flex;
-  }
-  .content__list-style-2 .sub__list-4
-  {
-      display: none;
-  }
-  
-  .content__right-list img
+.content__about
 {
-   width: 100%;
-   height: 100%;
-   margin-bottom: 10px;
-   margin-left: 0px;
-   margin-left: -4px;
+    display: none;
 }
-.content__right-list 
+.content__list-sub
 {
-    background: none;
-    margin-top: -20px;
-   padding-left: 0;
-   margin-left: 6px;
+    border-bottom: 0.5px solid  #313131;
+    padding-bottom: 20px;
 }
-.list__txt-heading 
+.menu__tablet 
 {
-    color: #fff;
-    font-size: 14px;
-    margin-bottom: 0px;
-    margin-left: 5px;
-   line-height: 23px;
-}
-.content__img
-{
-    padding: 15px;
-}
-.list__txt-about 
-{
-    color: #AAAA;
-    font-size: 14px;
-    margin-left: 5px;
-    line-height: 23px;
-    margin-bottom: 10px;
-
-}
-.content__right-list-txt img
-{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.right__list-all-txt
-{
-    margin-left: 4px;
-}
-.content__right-list
-{
-    margin-bottom: 30px;
-    margin-right: 2px;
-}
-.content__youtube 
-{
-    height:1360px;
-}
-.camera__content 
-{
-    width: 200px;
-}
-.content__right-list i
-{
-   position: absolute;
-    color: #fff;
-    top: 0%;
-    right: 1.5%;
-    background: #000;
-    padding: 5px 15px
+    display: flex;
 }
 }
-@media (min-width:1025px) and (max-width:1112px) {
+@media (min-width:1025px) and (max-width:1238px) {
  
 .content__youtube 
 {
     height: 2030px;
 }
+.content__emo-about
+{
+  display: none;
+}
+.content__list-emo
+{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+.content__emo-about-2
+{
+    display: block;
+    margin-bottom: 20px;
+}
+.content__right-nav li 
+{
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+}
+.content__right-video iframe
+{
+  height: 40%;
+}
+.content__right-nav li .list 
+{
+    display: block;
+    margin-top: 8px;
+}
+.content__right-nav li span
+{
+    display: none;
+}
+.content__about
+{
+    display: none;
+}
+.content__list-sub
+{
+    border-bottom: 0.5px solid  #313131;
+    padding-bottom: 20px;
+}
+.content__left-list img 
+{
+    margin-left: -10px;
+}
+.camera__content 
+{
+    position: fixed;
+    top: 6%;
+    right: 4%;
+}
 }
     
-@media (min-width:1211px){
-    .content__right 
-    {
-        width: 100%;
-    }
-  
-}
 @media (min-width:1210px) and (max-width:1240px) {
     .content__left
   {
@@ -522,54 +554,7 @@
 {
     background: #202020;
 }
-.swiper
-{
-    margin-left: 60px !important;
-}
 
-.modal.hidden 
-{
-    display: flex;
-}
-.sub__list-5 
-{
-    display: none;
-}
-.content__list .sub__text
-{
-    display: block;
-    margin-bottom: 20px;
-}
-.content__list-style-2
-{
-    border: none;
-    margin-top: 0px;
-}
-.content__list-4 i
-{
-    margin-top: -2px;
-}
-.content__right-list img
-{
-   width: 100%;
-   height: 100%;
-   margin-bottom: 10px;
-   margin-left: 5px;
-}
-.content__img 
-{
-    padding: 20px;
-}
-.content__right-list-txt img
-{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.right__list-icon
-{
-    right:-5px;
-}
 }
 @media (min-width:1209px) and (max-width:1210.5px) {
     .content__right.open 
@@ -577,6 +562,10 @@
         margin-left: 32px;
         width: 100%;
     }
+    .content__emo-about
+{
+  display: none;
+}
 }
 
 @media (min-width:1006px) and (max-width:1006.5px){
@@ -654,24 +643,47 @@
 {
   display: none;
 }
-.swiper {
-  height: 56px;
-  margin-left: 0px !important;
-  margin-top: 10px;
+
 }
-.content__right 
-{
-  width: 100%;
-  margin-left: 0 !important;
-}
-.swiper.close__3 
-{
-  margin-left: 0px !important;
-}
-}
-@media (min-width:1600px){
-    .content__youtube 
+@media (min-width:733.5px) and (max-width:739.5px){
+    .left__list
     {
-        height: 1800px;
+        flex-direction: column;
+    }
+    .content__left-list img 
+    {
+        width: 100%;
+        height: 100%;
+        margin-left: 0px;
+    }
+    .content__left-list
+    {
+        height: 3000px;
+    }
+    .content__video 
+    {
+        height: 6000px;
+    }
+    .list__txt-heading
+    {
+        margin-left: 10px;
+    }
+    .list__txt-about
+    {
+        margin-left: 10px;
+    }
+    .content__left-list
+    {
+        height: 3000px;
+    }
+}
+@media (min-width:1023px) and (max-width:1024.5px){
+    .left__list 
+    {
+        flex-direction: row;
+    }
+    .content__video
+    {
+        padding: 10px;
     }
 }
